logs/update_2026-04-21_21-03-01.log
[Tue 04/21/2026 21:03:01.77] Starting update 
Traceback (most recent call last):
  File "C:\Users\JerryPC\Desktop\childcare\scripts\update_dashboard.py", line 18, in <module>
    from ntpc_childcare_dashboard.render import render_dashboard
  File "C:\Users\JerryPC\Desktop\childcare\src\ntpc_childcare_dashboard\render.py", line 33
    html_template = """<!DOCTYPE html>
                    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 473)
        1 file(s) copied.
[Tue 04/21/2026 21:03:02.10] Synced index.html to "Z:\childcare\index.html" 

[Tue 04/21/2026 21:03:02.12] Finished with exit code 0 
